--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "start:mock": "NODE_ENV=development react-scripts start",
+    "start": "NODE_ENV=test react-scripts start",
+    "start:mock": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
