--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "NODE_ENV=test react-scripts start",
+    "start": "react-scripts start",
     "start:mock": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "server": "node services/index.js"
   },
   "eslintConfig": {
     "extends": [
